# zemo

./: .gitignore  Cargo.toml  README.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
crates/common/src/: error.rs  types.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: service.rs
crates/protocol/src/: envelope.rs  lib.rs  message.rs
crates/session/: Cargo.toml
crates/session/src/: session.rs  state.rs
crates/transport/: Cargo.toml
crates/transport/src/: tcp.rs
